【Hope主題】v06 券商與分類、融資券

--- a/src/guide/feature/多種占比圖.md
+++ b/src/guide/feature/多種占比圖.md
@@ -3,3 +3,14 @@ title: 多種占比圖
 icon: chart-pie
 order: 7
 ---
+
+### 資金比例
+
+- 在儀表板會依據資金比例(已投入資金/現金)自動計算百分比，並顯示還有多少**現金**可投入
+
+    ::: tip 需要先做投入資金的紀錄
+    參考 [頁面 > 券商與分類 #資金紀錄](../sheets/券商與分類.md#資金紀錄)
+    :::
+
+    ![](/images/台股訂閱版/儀表板_資金比例.jpg)
+
