--- a/src/guide/sheets/券商與分類.md
+++ b/src/guide/sheets/券商與分類.md
@@ -3,3 +3,45 @@ title: 券商與分類
 icon: shapes
 order: 7
 ---
+
+## 基本設定
+
+![設定範例](/images/台股訂閱版/券商與分類_設定.jpg)
+
+- **券商/分類** :
+    - 除了可以同時設定不同的券商外，也能透過此功能，將股票進行分類 ex.存股 / 電子股 / 定期定額等
+- 手續費折數
+    - 數字 `1` 為沒有折扣， **打8折** 請輸入 `0.8` 以此類推…
+    ::: tip 若券商手許費折扣是每個月發放一次，而不是每筆交易從中自動扣除
+    可以將手續費折數設定為 1 ，這樣每次交易的支出與收入的金額會跟帳戶實際扣款與匯入的金額相同
+    :::
+- 零股最低手續費
+    - 同最低手續費，但零股交易手續費經常低於20元，因此各券商在零股部分最低手續費有可能是1元
+- <i class="fa-solid fa-star"></i>融資券 :
+    - 融資券的成本費用，各券商也有所不同。皆在此設定
+    - 參考 [融資券](融資券.md)
+
+## 資金紀錄
+
+- 可紀錄資金投入的日期與時間
+
+    ![紀錄範例](/images/台股訂閱版/券商與分類_資金紀錄.jpg)
+    
+    ::: tip 儀表板的相關數據
+    自動計算的資金比例圖　→　參考 [功能 > 多種占比圖 #資金比例](../feature/多種占比圖.md#資金比例)
+    資金變化走勢圖　　　　→　參考 [功能 > 自動記錄投資變化](../feature/自動記錄投資變化.md)
+    :::
+
+## 交易成本表
+
+下方列表是股票交易基本的手續費。試算表內也有
+
+|  交易成本  |   手續費    |  交易稅  |  申購  | 股利  |
+|:------:|:--------:|:-----:|:----:|:---:|
+|  收取時機  |  買進、賣出   |  賣出   | 申購成功 | 發放時 |
+|   費率   | 0.1425%  | 0.30% |  70  | 10  |
+| ETF.權證 | 0.1425%  | 0.10% |  -   |  -  |
+| 債券型ETF | 0.1425%  | 0.00% |  -   |  -  |
+|  當沖　　  | 0.1425%  | 0.15% |  -   |  -  |
+|  收取最低  |    20    |   -   |  -   |  -  |
+|  備註　　  | 各券商有不同折扣 | 無條件捨去 |  -   |  -  |
