【Hope主題】v07 儀表板 gif 圖與相應的功能介紹、交易紀錄、平倉

--- a/src/guide/feature/一鍵更新.md
+++ b/src/guide/feature/一鍵更新.md
@@ -3,3 +3,9 @@ title: 一鍵更新
 icon: arrow-pointer
 order: 6
 ---
+
+#### 持股、歷史的更新
+
+當持股與歷史分頁的資料顯示不齊全時，只需要按【儀表板】的 <Badge>更新儀表板</Badge> 並等待指令碼跑完即可
+
+![](/images/台股訂閱版/儀表板_一鍵更新.gif)
