--- a/src/guide/feature/切換資料範圍的區間.md
+++ b/src/guide/feature/切換資料範圍的區間.md
@@ -4,3 +4,17 @@ icon: timeline
 order: 8
 next: ../sheets/
 ---
+
+#### 可自由切換儀表板的資料範圍時間區間
+
+#####  兩種切換方式
+
+- 下拉選單選擇年分
+- 手動輸入指定的日期
+
+    ::: tip 手動輸入日期的格式為 YYYY-MM-DD
+    :::
+
+選擇 / 輸入完畢後點按 <Badge>更新儀表板</Badge> 並等待指令碼跑完即可
+
+![](/images/台股訂閱版/儀表板_切換年分.gif)
