--- a/src/guide/feature/多種視覺化圖表.md
+++ b/src/guide/feature/多種視覺化圖表.md
@@ -4,6 +4,19 @@ icon: chart-column
 order: 2
 ---
 
-## 123
+#### 圖表可依照自己的需要調整顯示內容
 
-123
+![](/images/台股訂閱版/儀表板_切換圖表顯示.gif)
+
+#### 多種資訊圖表
+
+- 數字面板
+    - 市值、投入成本、損益(%)、差異比較(上升or下降)
+- 圓餅圖
+    - 持有股票 / 產業 / 分類 / 資金比例 等各種百分比圖
+- 長條圖
+    - 已實現 / 未實現 損已表
+- 時間線圖
+    - (自動記錄)投資變化
+- 走勢圖
+    - 簡易大盤走勢
