--- a/src/guide/feature/自動記錄投資變化.md
+++ b/src/guide/feature/自動記錄投資變化.md
@@ -4,9 +4,7 @@ icon: chart-line
 order: 4
 ---
 
-## 投資變化的觀察
-
-每週五盤後的晚上會自動將以下數據記錄下來，方便觀察投資走勢的變化
+#### 每週五晚上會自動將以下數據記錄下來，方便觀察投資走勢的變化
  
 - 投入成本
 - 市值
@@ -14,7 +12,7 @@ order: 4
 - 已實現損益
 - 未實現損益
 
-![](/images/台股訂閱版/儀表板_投資走勢圖.jpg)
+![](/images/台股訂閱版/儀表板_自動記錄.gif)
 
 ::: tip 操作小技巧
 - 調整想要顯示的走勢圖的時間區間 → 走勢圖下方的時間軸 or 左上角的 zoom
