--- a/src/guide/sheets/交易紀錄.md
+++ b/src/guide/sheets/交易紀錄.md
@@ -3,3 +3,102 @@ title: 交易紀錄
 icon: clipboard-list
 order: 2
 ---
+
+## 說明
+紀錄股市交易進出的頁面，主要分成兩大區塊「手動輸入區」和「自動生成區」
+::: tip 每當做完紀錄之後，需要切換到【儀表板】手動點按 <Badge>更新儀表板</Badge> 執行頁面更新
+參考 [功能 > 一鍵更新](../feature/一鍵更新.md)
+:::
+
+### 手動輸入區
+
+依照欄位填入or下拉選單選擇適當的選項
+
+- 只要輸入股票代號，股票的中文名稱會由公式自行帶出
+- 買/賣的成交價和股數填寫位置不同，若填寫錯誤會有紅色標記作為警示
+- 股票股利 → 選擇股票股利後，在**買入股數**的欄未填入分配到的**股票股數**，買入價格<font color="red">**不**</font>用填
+- ==平倉功能== → 在同一檔股票進出多次，為方便與區別近期與之前的獲利而設計的功能
+    - 參考 [平倉](#平倉)
+
+### 自動生成區
+
+- 根據券商與分類的選項，去計算每筆交易的各種成本
+- 決策原因，方便記錄交易進出的理由或判斷的基準點
+
+::: tip 若交易結果與券商有 1 元的誤差值
+於該筆交易的 W 欄 ( 零股價差1元 ) 選擇 <font color="red">扣1</font> 即可
+:::
+
+## 平倉
+
+【交易紀錄】的 <Badge>平倉</Badge> 欄位
+
+::: tip 當同一檔股票有多次進出的時
+能更精準的計算同一檔股票最新一次交易(排除過去)的損益而設計的
+:::
+
+平倉功能的有無，會影響「未實現損益」的計算和【持股】、【歷史】頁面的篩選方式
+
+###  有無平倉功能的差異
+
+舉例
+
+|     日期     |  進出   | 持股張數 | 成交價 |                設定                 |
+|:----------:|:-----:|:----:|:---:|:---------------------------------:|
+| 2020/01/05 | 買進10張 | 10 張 | 10元 |   <Badge type="tip">已平倉</Badge>   |
+| 2020/01/06 | 賣出10張 | 0 張  | 15元 |   <Badge type="tip">已平倉</Badge>   |
+| 2020/02/20 | 買進10張 | 10 張 | 20元 | <Badge type="warning">未平倉</Badge> |
+
+差異
+
+|  項目   | <font color="red">沒有</font>平倉功能               | <font color="blue">有</font>平倉功能   |
+|:-----:|:----------------------------------------------|:----------------------------------|
+| 主要差異  | 包含過去的損益                                       | 將過去的損益與現在的持股切分開來                  |
+| 平均成本  | (10 張 * 10 元 + 10 張 * 20 元) / 20 張<br> = 15 元 | 僅計算未平倉的部分<br> = 20 元              |
+| 未實現損益 | 25 元 - 15 元 (假設) 現價是25元<br> = 10 元            | 25 元 - 20 元 (假設) 現價是25元<br> = 5 元 |
+| 篩選方式  | 持股 　　→ 股數總和不為 0 <br> 歷史損益 → 股數總和為 0           | 持股 　　→ 未平倉 <br> 歷史損益 → 已平倉        |
+
+> 平倉功能可以更精準的計算，現有持股的未實現損益，以確保每次交易都能確實獲利
+
+### 如何設定已平倉/未平倉
+
+::: tip 買進/賣出，需要剛好能互相抵消。即買進股數 - 賣出股數 = 0
+:::
+
+- 在1/6時
+
+|     日期     |   進出   | 持股張數 |                設定                 | 
+|:----------:|:------:|:----:|:---------------------------------:|
+| 2020-01-05 | 買進10 張 | 10 張 | <Badge type="warning">未平倉</Badge> |
+| 2020-01-06 | 買進 5 張 | 15 張 | <Badge type="warning">未平倉</Badge> |
+
+- 在1/7時 → 與1/6剛好能抵銷，兩天都設定成「已平倉」
+
+|     日期     |   進出   | 持股張數 |                設定                 |
+|:----------:|:------:|:----:|:---------------------------------:|
+| 2020-01-05 | 買進10 張 | 10 張 | <Badge type="warning">未平倉</Badge> |
+| 2020-01-06 | 買進 5 張 | 15 張 |   <Badge type="tip">已平倉</Badge>   |
+| 2020-01-07 | 賣出 5 張 | 10 張 |   <Badge type="tip">已平倉</Badge>   |
+
+- 在1/9時 → 1/8.9連續賣出，但無法與剛好與先前買進的相互抵銷，因此先擱著
+
+|     日期     |   進出   | 持股張數 |                設定                 |
+|:----------:|:------:|:----:|:---------------------------------:|
+| 2020-01-05 | 買進10 張 | 10 張 | <Badge type="warning">未平倉</Badge> |
+| 2020-01-06 | 買進 5 張 | 15 張 |   <Badge type="tip">已平倉</Badge>   |
+| 2020-01-07 | 賣出 5 張 | 10 張 |   <Badge type="tip">已平倉</Badge>   |
+| 2020-01-08 | 賣出 3 張 | 7 張  | <Badge type="warning">未平倉</Badge> |
+| 2020-01-09 | 賣出 2 張 | 5 張  | <Badge type="warning">未平倉</Badge> |
+
+- 在1/10時 → 因5/8/9/10這4天加起來總和 = 0 ( 可以完全抵消 ) → 當天將這4天交易的筆數全部改設成「已平倉」
+
+|     日期     |   進出   | 持股張數 |              設定               |
+|:----------:|:------:|:----:|:-----------------------------:|
+| 2020-01-05 | 買進10 張 | 10 張 | <Badge type="tip">已平倉</Badge> |
+| 2020-01-06 | 買進 5 張 | 15 張 | <Badge type="tip">已平倉</Badge> |
+| 2020-01-07 | 賣出 5 張 | 10 張 | <Badge type="tip">已平倉</Badge> |
+| 2020-01-08 | 賣出 3 張 | 7 張  | <Badge type="tip">已平倉</Badge> |
+| 2020-01-09 | 賣出 2 張 | 5 張  | <Badge type="tip">已平倉</Badge> |
+| 2020-01-10 | 賣出 5 張 | 0 張  | <Badge type="tip">已平倉</Badge> |
+> 在2020-01-10時已經全部改成已平倉，在這時間點之後之後，即使再次交易0050
+所看到的未實現損益會是 **「只計算之後未平倉的部分」**，把2020-01-10以前損益的部分(已平倉)區分開來
