--- a/src/guide/sheets/券商與分類.md
+++ b/src/guide/sheets/券商與分類.md
@@ -10,6 +10,9 @@ order: 7
 
 - **券商/分類** :
     - 除了可以同時設定不同的券商外，也能透過此功能，將股票進行分類 ex.存股 / 電子股 / 定期定額等
+    ::: tip 儀表板的相關數據
+    自動計算的市值百比圖　→　參考 [功能 > 多種百分比圖 #券商與分類](../feature/多種百分比圖.md#券商與分類)
+    :::
 - 手續費折數
     - 數字 `1` 為沒有折扣， **打8折** 請輸入 `0.8` 以此類推…
     ::: tip 若券商手許費折扣是每個月發放一次，而不是每筆交易從中自動扣除
@@ -28,8 +31,8 @@ order: 7
     ![紀錄範例](/images/台股訂閱版/券商與分類_資金紀錄.jpg)
     
     ::: tip 儀表板的相關數據
-    自動計算的資金比例圖　→　參考 [功能 > 多種占比圖 #資金比例](../feature/多種占比圖.md#資金比例)
-    資金變化走勢圖　　　　→　參考 [功能 > 自動記錄投資變化](../feature/自動記錄投資變化.md)
+    自動計算的資金百分比圖　→　參考 [功能 > 多種百分比圖 #資金比例](../feature/多種百分比圖.md#資金比例)
+    資金變化走勢圖　　　　　→　參考 [功能 > 自動記錄投資變化](../feature/自動記錄投資變化.md)
     :::
 
 ## 交易成本表
@@ -45,3 +48,11 @@ order: 7
 |  當沖　　  | 0.1425%  | 0.15% |  -   |  -  |
 |  收取最低  |    20    |   -   |  -   |  -  |
 |  備註　　  | 各券商有不同折扣 | 無條件捨去 |  -   |  -  |
+
+## 融資券利率
+
+![設定範例](/images/台股訂閱版/券商與分類_融資券.jpg)
+
+::: info 因為每間券商的融資券利率有所不同，可根據各券商分別設定
+:::
+
