【Hope主題】v07 調整日期文字間距

--- a/src/guide/sheets/交易紀錄.md
+++ b/src/guide/sheets/交易紀錄.md
@@ -56,7 +56,7 @@ order: 2
 | 主要差異  | 包含過去的損益                                       | 將過去的損益與現在的持股切分開來                  |
 | 平均成本  | (10 張 * 10 元 + 10 張 * 20 元) / 20 張<br> = 15 元 | 僅計算未平倉的部分<br> = 20 元              |
 | 未實現損益 | 25 元 - 15 元 (假設) 現價是25元<br> = 10 元            | 25 元 - 20 元 (假設) 現價是25元<br> = 5 元 |
-| 篩選方式  | 持股 　　→ 股數總和不為 0 <br> 歷史損益 → 股數總和為 0           | 持股 　　→ 未平倉 <br> 歷史損益 → 已平倉        |
+| 篩選方式  | 持股 　　→ 股數總和 > 0 <br> 歷史損益 → 股數總和 = 0          | 持股 　　→ 未平倉 <br> 歷史損益 → 已平倉        |
 
 > 平倉功能可以更精準的計算，現有持股的未實現損益，以確保每次交易都能確實獲利
 
@@ -65,14 +65,14 @@ order: 2
 ::: tip 買進/賣出，需要剛好能互相抵消。即買進股數 - 賣出股數 = 0
 :::
 
-- 在1/6時
+- 在 1 / 6 時
 
 |     日期     |   進出   | 持股張數 |                設定                 | 
 |:----------:|:------:|:----:|:---------------------------------:|
 | 2020-01-05 | 買進10 張 | 10 張 | <Badge type="warning">未平倉</Badge> |
 | 2020-01-06 | 買進 5 張 | 15 張 | <Badge type="warning">未平倉</Badge> |
 
-- 在1/7時 → 與1/6剛好能抵銷，兩天都設定成「已平倉」
+- 在 1 / 7 時 → 與 1 / 6 剛好能抵銷，兩天都設定成「已平倉」
 
 |     日期     |   進出   | 持股張數 |                設定                 |
 |:----------:|:------:|:----:|:---------------------------------:|
@@ -80,7 +80,7 @@ order: 2
 | 2020-01-06 | 買進 5 張 | 15 張 |   <Badge type="tip">已平倉</Badge>   |
 | 2020-01-07 | 賣出 5 張 | 10 張 |   <Badge type="tip">已平倉</Badge>   |
 
-- 在1/9時 → 1/8.9連續賣出，但無法與剛好與先前買進的相互抵銷，因此先擱著
+- 在 1 / 9 時 → 1 / 8.9 連續賣出，但無法與剛好與先前買進的相互抵銷，因此先擱著
 
 |     日期     |   進出   | 持股張數 |                設定                 |
 |:----------:|:------:|:----:|:---------------------------------:|
@@ -90,7 +90,7 @@ order: 2
 | 2020-01-08 | 賣出 3 張 | 7 張  | <Badge type="warning">未平倉</Badge> |
 | 2020-01-09 | 賣出 2 張 | 5 張  | <Badge type="warning">未平倉</Badge> |
 
-- 在1/10時 → 因5/8/9/10這4天加起來總和 = 0 ( 可以完全抵消 ) → 當天將這4天交易的筆數全部改設成「已平倉」
+- 在 1 / 10 時 → 因 5 / 8 / 9 / 10 這4天加起來總和 = 0 ( 可以完全抵消 ) → 當天將這 4 天交易的筆數全部改設成「已平倉」
 
 |     日期     |   進出   | 持股張數 |              設定               |
 |:----------:|:------:|:----:|:-----------------------------:|
@@ -100,5 +100,5 @@ order: 2
 | 2020-01-08 | 賣出 3 張 | 7 張  | <Badge type="tip">已平倉</Badge> |
 | 2020-01-09 | 賣出 2 張 | 5 張  | <Badge type="tip">已平倉</Badge> |
 | 2020-01-10 | 賣出 5 張 | 0 張  | <Badge type="tip">已平倉</Badge> |
-> 在2020-01-10時已經全部改成已平倉，在這時間點之後之後，即使再次交易0050
-所看到的未實現損益會是 **「只計算之後未平倉的部分」**，把2020-01-10以前損益的部分(已平倉)區分開來
+> 在 2020-01-10 時已經全部改成已平倉，在這時間點之後之後，即使再次交易 0050
+所看到的未實現損益會是 **「只計算之後未平倉的部分」**，把 2020-01-10 以前損益的部分(已平倉)區分開來
