【Hope主題】v08 新增交易紀錄.gif 與功能、頁面說明

--- a/src/guide/feature/自動更新股票成交價.md
+++ b/src/guide/feature/自動更新股票成交價.md
@@ -3,3 +3,38 @@ title: 自動更新股票成交價
 icon: cloud-arrow-down
 order: 1
 ---
+
+## 股價的更新
+
+數值以及圖表會因為股價的變動而自動更新儀表板上的數據 ( 如下圖 )[^first]
+
+![ _台股訂閱版_ ](/images/台股訂閱版/儀表板.gif)
+
+- 無須任何動作，只要打開試算表就會自己更新
+- 也因此在剛開打試算表時會需要讓試算表更新一下
+
+::: tip 更新股票的股價並<font color="red">非即時</font>，有時間上的落差
+:::
+
+### 若發現有股票沒有股票價格
+
+不用擔心，等待一段時間即可~
+試算表會自動持續更新股票價格，只不過這次更新時剛好某檔股票取價失敗而已
+
+### 取價失敗原因
+
+1. 可能是查詢網站在這一次查詢價格時沒有回應
+2. 查詢次數限制在短時間內達到 Google 的查詢次數上限
+
+### 降低失敗的方式
+
+試算表為了降低抓不到股價的情況發生做了以下的優化
+
+1. 多個取價來源 :arrow_right: 有 Google、API、3 個查詢網站。共 5 種來源
+2. 改善取價結構 :arrow_right: 每檔股票的現價都是在股票代號分頁，且前面取價失敗才會往後嘗試。大幅降低總查詢次數
+3. 自製取價 API :arrow_right: 網路取價是屬於爬蟲技術，而 API 屬於不同技術 ( 方式不同 )。透過不同方式降低失敗機率
+
+#### 註釋
+
+[^first]: 圖表的變化
+圖表的截圖期間內沒有新的股票交易，所以持股數、投入成本、已實現損益並不會產生變化。僅模擬顯示因股價所產生的變化
