--- a/src/guide/sheets/交易紀錄.md
+++ b/src/guide/sheets/交易紀錄.md
@@ -4,6 +4,8 @@ icon: clipboard-list
 order: 2
 ---
 
+![紀錄一筆新的交易](/images/台股訂閱版/交易紀錄.gif)
+
 ## 說明
 紀錄股市交易進出的頁面，主要分成兩大區塊「手動輸入區」和「自動生成區」
 ::: tip 每當做完紀錄之後，需要切換到【儀表板】手動點按 <Badge>更新儀表板</Badge> 執行頁面更新
@@ -49,7 +51,7 @@ order: 2
 | 2020/01/06 | 賣出10張 | 0 張  | 15元 |   <Badge type="tip">已平倉</Badge>   |
 | 2020/02/20 | 買進10張 | 10 張 | 20元 | <Badge type="warning">未平倉</Badge> |
 
-差異
+上表舉例中有無平倉會產生的差異如下
 
 |  項目   | <font color="red">沒有</font>平倉功能               | <font color="blue">有</font>平倉功能   |
 |:-----:|:----------------------------------------------|:----------------------------------|
