--- a/src/guide/sheets/儀表板.md
+++ b/src/guide/sheets/儀表板.md
@@ -3,3 +3,13 @@ title: 儀表板
 icon: object-group
 order: 1
 ---
+## 四大區塊
+
+儀表板是本試算表集大成的一個功能分頁
+
+[[Toc]]
+
+### 查詢區塊
+### 數值和百分比區塊
+### 長條圖與時間線圖區塊
+### 簡易線圖區塊
