--- a/src/guide/feature/輕鬆管理多家券商.md
+++ b/src/guide/feature/輕鬆管理多家券商.md
@@ -3,3 +3,38 @@ title: 輕鬆管理多家券商
 icon: landmark
 order: 5
 ---
+
+## 多家券商或自訂分類
+
+在[券商與分類](../sheets/券商與分類.md)內可以依照自己的需求分別設定自己的分類或是不同券商
+
+![設定範例](/images/台股訂閱版/券商與分類_設定.jpg)
+
+### 券商
+
+每間券商的折扣和優惠都有所不同，為了讓計算上更加精準而加入了這功能
+
+可分別設定:
+
+- 手續費折數
+- 最低手續費
+- 零股最低手續費
+- 進位方式
+
+::: tip 進位方式
+股票若是購買零股，金額在計算上會有小數點，而小數點的進位方式會影響計算的精準度
+一開始不知道自己券商的進位方式，可以先任選一種，等紀錄的交易多了在回頭調整即可
+:::
+
+### 分類
+
+在「券商/分類」欄位的名稱可以自訂
+券商與分類是同樣概念，把上述一些基本設定設為一樣的就可以 ( 只是分類所以折讓數等優惠都相同 )
+
+自訂分類的舉例 ex. 定期定額、電子股、存股等等
+
+::: note 自訂分類，以設定範例的圖為例
+存股、電子股仍是在台新證券交易，因此後面的設定仍與台新證券相同
+:::
+
+
