【Hope主題】v09 更換儀表板.gif 與儀表板說明

--- a/src/guide/feature/切換資料範圍的區間.md
+++ b/src/guide/feature/切換資料範圍的區間.md
@@ -9,7 +9,7 @@ next: ../sheets/
 
 #####  兩種切換方式
 
-- 下拉選單選擇年分
+- 下拉選單選擇年分 :arrow_right: 時間區間會自動填入
 - 手動輸入指定的日期
 
     ::: tip 手動輸入日期的格式為 YYYY-MM-DD
