--- a/src/guide/feature/自動化計算.md
+++ b/src/guide/feature/自動化計算.md
@@ -6,8 +6,10 @@ order: 3
 
 本試算表除了[交易紀錄](../sheets/交易紀錄.md)與[券商與分類](../sheets/券商與分類.md)需要自己手動輸入之外，幾乎都設定好公式。
 包含浮動的股票股價在內的計算基本上都已自動化
-此外在各處都還有下拉選單可供切換，切換後的數據也是自動計算並呈現
 
 > 下圖 : 左側為手動輸入區，右側黃色部分為自動生成區 ( 自動計算 )
 
 ![自動化計算示意圖](/images/台股訂閱版/交易紀錄.gif)
+
+::: tip 此外在各處都還有下拉選單可供切換，切換後的數據也是自動計算並呈現
+:::
