--- a/src/guide/sheets/儀表板.md
+++ b/src/guide/sheets/儀表板.md
@@ -10,6 +10,17 @@ order: 1
 [[Toc]]
 
 ### 查詢區塊
+
+![](/images/台股訂閱版/儀表板_查詢區塊.jpg)
+
+查詢區塊分三個部分
+
+|        區塊         |                                       功能                                       |
+|:-----------------:|:------------------------------------------------------------------------------:|
+| 查詢區間 <br> ( 含年分 ) |                        儀表板的資料全部都會依據此處更新 ( 需要按更新按鈕才會更新 )                        |
+|       資料比較        | 資料的比較值，影響藍色底線部分<br>( 相較於多久前，資料上漲或下跌了多少 ) ![](/images/台股訂閱版/儀表板_資料比較.jpg =460x) |
+|       更新儀表板       |              有新增交易紀錄 or 想更換儀表板的資料顯示區間時點按此按鈕<br>( 按完之後需要等待程式執行一下 )              |
+
 ### 數值和百分比區塊
 ### 長條圖與時間線圖區塊
 ### 簡易線圖區塊
