【Hope主題】v10 儀表板說明-長條圖區塊

--- a/src/guide/sheets/儀表板.md
+++ b/src/guide/sheets/儀表板.md
@@ -3,24 +3,65 @@ title: 儀表板
 icon: object-group
 order: 1
 ---
-## 四大區塊
 
+::: center
 儀表板是本試算表集大成的一個功能分頁
+會==自動計算==各種資料並用圖表呈現
+:::
 
+![](/images/台股訂閱版/儀表板.gif)
+
+## 四大區塊
 [[Toc]]
 
 ### 查詢區塊
 
 ![](/images/台股訂閱版/儀表板_查詢區塊.jpg)
 
-查詢區塊分三個部分
+|     區塊      |                                       功能                                       |
+|:-----------:|:------------------------------------------------------------------------------:|
+|    查詢區間     |                    ==儀表板的資料全部都會依據此處更新 ( **需要按更新按鈕才會更新** )==                    |
+|    資料比較     | 資料的比較值，影響藍色底線部分<br>( 相較於多久前，資料上漲或下跌了多少 ) ![](/images/台股訂閱版/儀表板_資料比較.jpg =460x) |
+| 更新按鈕 &emsp; |              有新增交易紀錄 or 想更換儀表板的資料顯示區間時點按此按鈕<br>( 按完之後需要等待程式執行一下 )              |
 
-|        區塊         |                                       功能                                       |
-|:-----------------:|:------------------------------------------------------------------------------:|
-| 查詢區間 <br> ( 含年分 ) |                        儀表板的資料全部都會依據此處更新 ( 需要按更新按鈕才會更新 )                        |
-|       資料比較        | 資料的比較值，影響藍色底線部分<br>( 相較於多久前，資料上漲或下跌了多少 ) ![](/images/台股訂閱版/儀表板_資料比較.jpg =460x) |
-|       更新儀表板       |              有新增交易紀錄 or 想更換儀表板的資料顯示區間時點按此按鈕<br>( 按完之後需要等待程式執行一下 )              |
+::: tip 「資料比較」在剛開始使用時會無法顯示
+因為試算表本身還沒開始自動記錄資料，所以沒有可以比較的資料。
+隨著時間前進自動記錄會記錄下每周的資料變化 → 資料比較就會出來了
+:::
 
 ### 數值和百分比區塊
+
+![](/images/台股訂閱版/儀表板_數值區塊.jpg)
+
+|       區塊       |                   資料來源                   | 說明                                                                    |
+|:--------------:|:----------------------------------------:|-----------------------------------------------------------------------|
+|      未實現       |            [持股](持股與歷史.md#持股)             | 持有股票以現價賣出並扣除成本後的損益<br> ( 會受股價影響 )                                     |
+|      已實現       |            [歷史](持股與歷史.md#歷史)             | 實際 ( 已入口袋 ) 的損益 ( 不會受股價影響 )                                           |
+|       市值       |            [持股](持股與歷史.md#持股)             | 所有持有股票的價值總和                                                           |
+|      投入成本      |            [持股](持股與歷史.md#持股)             | 實際支出的總和                                                               |
+|   持股 ( 圓餅圖 )   |                  未實現損益表                  | 將持股依照市值劃分比例的占比圖                                                       |
+| 產業/ETF ( 圓餅圖 ) |   [持股](持股與歷史.md#持股) & [股票代號](股票代號.md)    | 將持股市值依照**證交所**的產業分類的占比圖                                               |
+| 券商/分類 ( 圓餅圖 )  |                  未實現損益表                  | 將持股市值依照**自己制定**的券商/分類分類的占比圖                                           |
+| 持股/現金 ( 圓餅圖 )  | [持股](持股與歷史.md#持股) &<br>[券商與分類](券商與分類.md) | 持有的現金 ( 含現金股利 ) 與已投入股市的占比圖                                            |
+|       現金       |  [現金股利](現金股利.md) &<br>[券商與分類](券商與分類.md)  | 總資金加上現金股利並扣除已投入股市的部分                                                  |
+|      現金股利      |             [現金股利](現金股利.md)              | 1. 選擇今年則為今年的現金股利總和<br>2. 選擇儀表板年份則依查詢區間該年度的總和<br>&emsp;→若查詢區間為全部則為歷年總和 |
+
+
 ### 長條圖與時間線圖區塊
+
+::: center
+可以非常直觀的看出損益和走勢
+長條圖以 0 為軸，往上為正往下為負
+:::
+
+![](/images/台股訂閱版/儀表板_長條圖區塊.jpg)
+
+|  區塊  |                      自動記錄<br>時間軸變化                       |                           持有<br>未實現損益表                           |                     歷史<br>已實現損益表                     |
+|:----:|:--------------------------------------------------------:|:----------------------------------------------------------------:|:----------------------------------------------------:|
+|  顏色  |                            綠色                            |                                藍色                                |                          黃色                          |
+|  功能  | 可觀察各數據的走勢<br>參考  [功能 > 自動記錄投資變化](../feature/自動記錄投資變化.md) | 持有股票以現價計算扣除交易成本後的損益<br>參考  [功能 > 多種視覺化圖表](../feature/多種視覺化圖表.md) | 過往的投資損益<br>參考  [功能 > 多種視覺化圖表](../feature/多種視覺化圖表.md) |
+| 動態選項 |      1. 可調整顯示的數值 ( 不可重複 ) 共 5 種可選<br>2. 可調整顯示的時間區間       |                         可調整圖表顯示的順序、數量、時間                         |                   可調整圖表顯示的順序、數量、時間                   |
+| 資料來源 |                     [自動記錄](自動記錄.md)                      |                        [持股](持股與歷史.md#持股)                         |                  [歷史](持股與歷史.md#歷史)                   |
+
+
 ### 簡易線圖區塊
