【Hope主題】v11 現金股利、觀察

--- a/src/guide/sheets/交易紀錄.md
+++ b/src/guide/sheets/交易紀錄.md
@@ -18,9 +18,11 @@ order: 2
 
 - 只要輸入股票代號，股票的中文名稱會由公式自行帶出
 - 買/賣的成交價和股數填寫位置不同，若填寫錯誤會有紅色標記作為警示
-- 股票股利 → 選擇股票股利後，在**買入股數**的欄未填入分配到的**股票股數**，買入價格<font color="red">**不**</font>用填
+- 股票股利 → 選擇股票股利後，在**買入股數**的欄位填入分配到的**股票股數**，買入價格<font color="red">**不**</font>用填
 - ==平倉功能== → 在同一檔股票進出多次，為方便與區別近期與之前的獲利而設計的功能
     - 參考 [平倉](#平倉)
+- 券商/分類 → 可以自己制定自己的券商/分類
+    - 參考 [功能 > 輕鬆管理多家券商](../feature/輕鬆管理多家券商.md)
 
 ### 自動生成區
 
