--- a/src/guide/sheets/儀表板.md
+++ b/src/guide/sheets/儀表板.md
@@ -65,3 +65,15 @@ order: 1
 
 
 ### 簡易線圖區塊
+
+::: center
+可查詢大盤以及持有個股的資訊 ( 限上市公司 )
+:::
+
+![](/images/台股訂閱版/儀表板_簡易線圖.jpg)
+
+|  下拉選項   |              說明              |
+|:-------:|------------------------------|
+|  大盤/個股  | 選擇大盤 : 無論右邊個股名稱為何，一律顯示大盤指數資訊 |
+| 波段區間(天) |          簡易線圖的時間軸長短          |
+|   名稱    |  選擇個股 : 切換「名稱」可顯示持有個股的簡易資訊   |
