--- a/src/guide/sheets/現金股利.md
+++ b/src/guide/sheets/現金股利.md
@@ -3,3 +3,62 @@ title: 現金股利
 icon: money-bill
 order: 3
 ---
+## 現金股利
+
+![](/images/台股訂閱版/進階功能_現金股利_篩選.jpg)
+
+現金股利，在成本計算上與一般股票交易截然不同。若想確實計算的話，切分開來是比較適當的
+
+ex. 二代健保補充保費、併入個人綜合所得稅(依每個人的收入級距不同，會有成本上的差距)等
+
+加上台灣人喜歡存股的人不少，因此特地設置的存股計畫區以符合大多數人的需求
+
+::: tip 股票股利，請分別記錄以下兩個地方
+- 在【交易紀錄】→ 欄位 <Badge>買/賣</Badge> 選擇「股票股利」，欄位 <Badge>買入價格</Badge> 不用輸入
+- 在【現金股利】→ 「現金股利記錄區」
+:::
+
+主要分為三大區塊
+1. 自動計算區塊
+2. [股利記錄區](#股利記錄區) > 需手動紀錄
+3. [存股計畫區](#存股計畫區) > 需手動紀錄
+
+- 【自動計算區塊】
+
+  此區塊可以自由切換要顯示的股票標的是「股利紀錄區」(全部) or 「存股計畫區」(只篩選出計劃內的股票標的)
+
+  **可篩選的條件有**
+
+|     下拉選單      | 說明                                               |
+|:-------------:|--------------------------------------------------|
+| 時間正 / 倒序、無排序  | 可選擇想要的排序 ( 僅在股利紀錄區可排序 )                          |
+| 股利紀錄區 / 存股計畫區 | 可選擇想要查看的股票區塊                                     |
+|  總股利 / 今年股利   | 計算股利現金殖利率是<font color="red">僅</font>計算今年 or 全部總和 |
+|    股利統計篩選     | 方便查看單一個股所有的股利紀錄                                  |
+|    年度股利合計     | 查詢各年度現金股利總和                                      |
+
+- 平均持有成本
+    - 純交易 : 不含現金股利
+    - 含股利 : 包含累計的現金股利 ( 依總股利 / 今年 )，去計算平均持有成本。(領越多平均持有成本越低)
+- 現金殖利率
+    - 依 ( 總股利 / 今年 ) 計算現金殖利率
+
+### 股利記錄區
+
+圖左
+此區塊需手動輸入，為單存紀錄的區塊
+![](/images/台股訂閱版/進階功能_現金股利_紀錄.jpg)
+
+::: tip 股票股利， ( 因股票股利可以再次交易 ) 需額外在【交易紀錄】內紀錄股票股利的部分
+:::
+
+### 存股計畫區
+
+::: right
+圖右
+能為自己設定目標。ex. 哪一檔股票，要存多少張數
+![](/images/台股訂閱版/進階功能_現金股利_紀錄.jpg)
+:::
+
+::: tip 設定後會自動依據記錄區計算達成率，在超過100%時會自動變成「醒目的達成」
+:::
