--- a/src/guide/sheets/觀察.md
+++ b/src/guide/sheets/觀察.md
@@ -3,3 +3,12 @@ title: 觀察
 icon: eye
 order: 4
 ---
+::: center
+可將觀察的口袋名單，記錄在此頁
+:::
+
+![](/images/台股訂閱版/觀察.jpg)
+
+- 可設定 買進 / 賣出 / 停損 的目標價位
+- 若成交價在設定的價格範圍內，會自動以相同的顏色做出醒目提醒
+- 可在最後觀察重點記錄下為何關注，以及要關注什麼等筆記
