【Hope主題】v12 觀察、持股與歷史、統計

--- a/src/guide/sheets/持股與歷史.md
+++ b/src/guide/sheets/持股與歷史.md
@@ -3,7 +3,56 @@ title: 持股與歷史
 icon: dollar-sign
 order: 5
 ---
+## 共同部分
+
+### 資料並未更新
+若交易紀錄頁面有更新但 「持股」「歷史」頁面卻沒有更新的話
+
+::: tip 請按【儀表板】的 <Badge>更新儀表板</Badge>
+參考 [功能 > 一鍵更新](../feature/一鍵更新.md)
+:::
+
+### 區別方式
+
+| 持股 | 未平倉 | 仍持有的股票 |
+|----|-----|--------|
+| 歷史 | 已平倉    | 出清 ( 賣光 ) 的股票       |
+::: tip 配合交易紀錄的「平倉欄位」來做區分
+參考 [交易紀錄 > 平倉](交易紀錄#平倉)
+:::
+
+### 可直折疊分類
+
+
+::: center
+當同一檔股票設有多種分類時可以摺疊或展開
+![](/images/台股訂閱版/摺疊_歷史.gif)
+
+儀表板對應的部分也會跟著摺疊或展開
+<img src="/images/台股訂閱版/摺疊_儀表板.gif" alt="image" height="400"/>
+:::
 
 ## 持股
 
+在此分頁的「股數」都應該要 > 0
+與儀表板的「持股」未實現損益表 ( 藍色 ) 長條圖同步
+
+#### 持股欄位說明
+
+|   欄位名稱   | 說明                                                 |
+|:--------:|----------------------------------------------------|
+|    日期    | 該股票最後一次交易的日期                                       |
+|   買入均價   | 實際買入價格的平均 ( <font color="red">**不**</font>包含股票股利 ) |
+|   交易成本   | 是==已交易==所有交易成本的合計                                  |
+|   平均成本   | 全部股數的平均買入價 ( 包含股票股利 )                              |
+|    收入    | 若有多次交易且仍尚未平倉時會出現的收入                                |
+| 未實現損益(率) | 假設股票以現價全數賣出後的實際損益 ( ==有扣除==交易成本 )                  |
+|  產業/ETF  | 依據證交所的產業與分類                                        |
+
+
 ## 歷史
+
+在此分頁的「股數」都應該要 = 0
+與儀表板「歷史」已實現損益表 ( 黃色 ) 長條圖同步
+
+因為已經完成買入和賣出的動作，因此欄位名稱就是字面上的意思就不特地說明拉~
