--- a/src/guide/sheets/統計.md
+++ b/src/guide/sheets/統計.md
@@ -3,3 +3,29 @@ title: 統計
 icon: magnifying-glass-chart
 order: 6
 ---
+
+::: center
+統計分為左右兩個部分
+分別為「依股票」「依日期」
+可以快速篩選過濾【交易紀錄】的資料
+:::
+![紅色框的部分是下拉選單](/images/台股訂閱版/統計.jpg)
+
+## 內部報酬率
+
+::: note 何謂內部報酬率
+這是一種投資的評估方法，因為投資報酬率和時間有高度相關
+所以將時間納入報酬率計算中的一種計算公式
+:::
+
+#### IRR vs XIRR
+
+兩者差在時間的定期與不定期
+- 定期 ( IRR )
+- 不定期 ( XIRR )
+#### 補充
+:::info 計算時有假設以現價全數賣出，以此來計算報酬率
+這樣比較接近實際報酬 ( 若不如此只買不賣時會是負報酬 )
+:::
+
+
