--- a/src/guide/sheets/觀察.md
+++ b/src/guide/sheets/觀察.md
@@ -5,10 +5,15 @@ order: 4
 ---
 ::: center
 可將觀察的口袋名單，記錄在此頁
+若成交價在設定的價格範圍內，會自動以相同的顏色做出醒目提醒
 :::
 
 ![](/images/台股訂閱版/觀察.jpg)
 
-- 可設定 買進 / 賣出 / 停損 的目標價位
-- 若成交價在設定的價格範圍內，會自動以相同的顏色做出醒目提醒
-- 可在最後觀察重點記錄下為何關注，以及要關注什麼等筆記
+| 項目 / 欄位  | 說明                      |
+|:--------:|-------------------------|
+|    設定    | 可分別設定買進 / 賣出 / 停損 的目標價位 |
+|    代號    | 只需輸入股票代號，股票名稱、現價會自己帶出來  |
+|    題材    | 自訂關注的分類 or 題材           |
+| 產業 / ETF | 依據證交所的分類自動帶出            |
+|   觀察筆記   | 可在觀察的同時記錄自己的關注點或原因      |
