【Hope主題】v13 股票代號

--- a/src/guide/sheets/統計.md
+++ b/src/guide/sheets/統計.md
@@ -21,8 +21,8 @@ order: 6
 #### IRR vs XIRR
 
 兩者差在時間的定期與不定期
-- 定期 ( IRR )
-- 不定期 ( XIRR )
+- IRR : 定期
+- XIRR : 不定期
 #### 補充
 :::info 計算時有假設以現價全數賣出，以此來計算報酬率
 這樣比較接近實際報酬 ( 若不如此只買不賣時會是負報酬 )
