--- a/src/guide/sheets/股票代號.md
+++ b/src/guide/sheets/股票代號.md
@@ -3,3 +3,57 @@ title: 股票代號
 icon: code
 order: 8
 ---
+
+:::center
+此頁為全自動，無需做任何更動
+表格會自己更新
+股票價格會自動出現在「取價」欄位
+:::
+![](/images/台股訂閱版/股票代號.jpg)
+
+### 僅上市櫃 
+取價欄位上方的下拉選單，為此頁唯一一個可以控制的地方
+可選擇股票代號的更新來源
+
+| 選項   | 自動程度  | 說明                        |
+|------|-------|---------------------------|
+| 僅上市櫃 | 全自動更新 | 每周一次會自動更新來自證交所的上市櫃股票資訊    |
+| 含互助表 | 半自動更新 | 開放所有使用者共同編輯，一人更新即所有人都跟著更新 |
+
+#### 來源差異補充
+
+- 上市櫃已包含絕大多數的股票，但像是「興櫃」就不在上市櫃的名單中，只能自行新增
+- 一般而言，僅上市櫃 ( 預設 ) 已足夠使用
+- 興櫃並不是所有取價網站都能夠取價，因此興櫃在取價時較容易失敗
+
+### 自動取價
+
+- 此分頁會自動取得最新成交價 ( 非即時 )
+  1. 取價來源為查詢股票的平台或網站，屬於爬蟲技術
+  2. 為避免單一來源造容易造成取價失敗，已建立多個來源網站
+  ::: details 取價順序
+  Google財經 > 基本市況報導網站(mis.tse) > 嗨投資(histock) > 鉅亨網(cnyes) > 英為財情(investing)
+  :::
+  3. 取價網站若是同時間死掉或是更改網站架構，有可能造成無法取價的結果
+  4. 因爬蟲技術違反股票網站的利益(沒有實際觀看網站，無法獲取廣告利潤等)
+     - 若需要查價的股票很多，且在短時間查詢太多次，有可能造成短時間內無法取價
+     - 全自動化版已將爬蟲次數改善並降至最低，一般使用不會輕易超過其使用量
+     - 若無法取價，通常等待一段時間(或幾天)後。就會自己恢復
+
+#### 外部取價區
+
+::: center
+「取價網站」與「路徑」切勿更動，會導致取價失敗
+:::
+![](/images/台股訂閱版/股票代號_股票代號互助表.jpg)
+::: tip
+「取價網站」與「路徑」做成動態 ( 可更改 ) 是方便未來取價網站的網站架構有改變時方便更新
+:::
+
+### 股票代號互助表
+
+- 連結 : [股票代號互助表](https://docs.google.com/spreadsheets/d/1gPp3MOwiIpfs5FVDnLXIq2b9UizYjbkPCSAjnlkzVdQ/edit#gid=0)
+- 此表為 ==大家共同維護== 和更新 → 為預防編輯上的錯誤，採用 Google 表單的填寫方式
+- 因股票代號會不段變化 ( 新公司上市櫃等 ) → 為使更新和維護更加自動化而建立
+- 務必閱讀完 <font color="red">**使用說明**</font> 後再填寫
+
