【Hope主題】v14 自動記錄，guide 全部完成

--- a/src/guide/feature/自動記錄投資變化.md
+++ b/src/guide/feature/自動記錄投資變化.md
@@ -4,7 +4,7 @@ icon: chart-line
 order: 4
 ---
 
-#### 每週五晚上會自動將以下數據記錄下來，方便觀察投資走勢的變化
+#### 試算表將自動將以「週」為單位下數據記錄下來，方便觀察投資走勢的變化
  
 - 投入成本
 - 市值
@@ -20,4 +20,8 @@ order: 4
 :::
 
 ::: note 目前試算表的手機 APP 尚不支援時間線圖
+:::
+
+::: info
+參考 [頁面 > 自動記錄](../sheets/自動記錄.md)
 :::
