--- a/src/guide/sheets/自動記錄.md
+++ b/src/guide/sheets/自動記錄.md
@@ -3,3 +3,24 @@ title: 自動記錄
 icon: laptop-file
 order: 9
 ---
+
+::: center
+在每周六早上4-5點間，試算表會自動記錄當下的資料
+如下圖
+:::
+
+![](/images/台股訂閱版/自動記錄.jpg)
+
+::: warning 請務必在紀錄的時間點前，讓儀表板的查詢區間保持在查詢「全部」的狀態
+否則若儀表板的資料是前幾年的資料，記錄下的將會是以前的資料
+:::
+
+::: center
+時間一長，就可以在儀表板自動轉換成時間走勢圖
+:::
+
+![](/images/台股訂閱版/儀表板_自動記錄.gif)
+
+::: info
+參考 [功能 > 自動記錄投資變化](../feature/自動記錄投資變化.md)
+:::
