【Hope主題】v17 將台股版訂閱費用獨立抽出來

--- a/src/guide/version/台股訂閱版.md
+++ b/src/guide/version/台股訂閱版.md
@@ -33,6 +33,6 @@ order: 1
 1. 訂閱 - 參考 [指南 > 訂閱](../#訂閱)
 2. 啟用 - 參考 [指南 > 開始使用](../#開始使用)
 
-## 訂閱費用
+## 台股訂閱版費用
 
-<!-- @include: ../README.md{102-107} -->
+<!-- @include: ../include/訂閱費用.md -->
