【Hope主題】v19 微調內容

--- a/src/guide/version/客製化.md
+++ b/src/guide/version/客製化.md
@@ -75,7 +75,7 @@ flowchart TB
   - [預覽連結](https://docs.google.com/spreadsheets/d/1uIzjgipsAJl9ZEB5jUdOiloLhx0bZAXobWcNnhS5vok)
   - 說明
     - 權證代號變更很快，且有期限。
-    - 原本的股票代號 <Badge type="danger" text="不可以" vertical="middle"/> 新增權證代號
+    - 原本的股票代號 <Badge type="danger">不可以</Badge> 新增權證代號
       - 參考 [分頁 > 股票代號](../sheets/股票代號.md)
     - 因需求而客製化了「權證版」
   - 使用方式
