【Hope主題】v20 FQA review 至 2021-06-25

--- a/src/FQA/2021-05-20.md
+++ b/src/FQA/2021-05-20.md
@@ -1,5 +1,5 @@
 ---
-description:
+description: 【全自動股票管理表】版本
 date: 2021-05-20
 category:
  - 台股版
@@ -11,16 +11,21 @@ tag:
 
 ### 查看版本
 
-  在Read ME! 分頁裡有紀錄「最後更新」的日期
-  
-  **日期即版本**
+  【台股訂閱版v==2.0== | 全自動股票管理表】
 
-### 如何更新管理表的版本
+  ==2.0== 即是版本號碼
 
-  點擊分享範本連結，重新重複一次建立副本的步驟
+  在【ReadMe】分頁裡有更詳細的版本更新紀錄
+
+### 如何更新版本
+
+  簡單說就是，再從來源複製一次並將手動輸入的資料複製過去
   
-  然後將【交易紀錄】的手動輸入區以及【券商與分類】的資料搬過去。
+  ex.【交易紀錄】的手動輸入區、【券商與分類】、【現金股利】的股利紀錄區等。
   
-  ::: tip 需要注意欄位的格式還有其他可能的變化(ex.欄位不同)，不要只是單純複製貼上
-  確認資料無誤即搬運更新完畢
+  ::: tip 需要注意欄位格式的變化
+  ex.自動 / 純文字 / 數字
+  善用`滑鼠右鍵 > 選擇性貼上 > 僅貼上值` or `Ctrl + Shift + V`
   :::
+
+  確認資料無誤即更新完畢
