--- a/src/FQA/2021-05-24.md
+++ b/src/FQA/2021-05-24.md
@@ -5,7 +5,7 @@ category:
  - 台股版
  - 儀表板
  - 持股
- - 歷史損益
+ - 歷史
 tag:
  - Sheet操作
 ---
@@ -16,9 +16,9 @@ tag:
 
 ### 說明
 
-  歷史損益長條圖 - 資料來源為歷史損益分頁
+  未實現損益長條圖 - 資料來源為【歷史】分頁
 
-  已實現損益長條圖 - 資料來源為持股分頁
+  已實現損益長條圖 - 資料來源為【持股】分頁
 
   若有圖表沒有顯示圖案
 
