--- a/src/FQA/2021-06-25.md
+++ b/src/FQA/2021-06-25.md
@@ -3,16 +3,18 @@ description:
 date: 2021-06-25
 category:
  - 台股版
- - 交易紀錄
- - 股票代號
+ - 儀表板
 tag:
  - Sheet操作
 ---
 
 # 出現"需授權取價"
 
-  因為此全自動範本在背後自動處理了很多事。因此若不授權，有很多功能像是取得現價等就無法正常運作。此問題只要點擊儀表板的按鈕並授權即可解決
+  因為【全自動股票管理表】在背後自動處理了很多事。若不授權，有很多像是取得現價等等的功能就無法正常運作。此問題只要點擊【儀表板】的按鈕並授權即可解決
+
+ :::info 授權成功後要再點一次按鈕執行
+ :::
 
 ### 授權步驟
 
-  參考 [快速上手 > 第一次使用 > 建立自己的試算表 > 步驟3-啟用一鍵更新](../StockProfolioDocs/QuickStart/第一次使用.md#步驟3-啟用一鍵更新-含自動取價)
+  參考 [指南 > 開始使用 > 第一次使用 > 1. 啟用並授權-啟用示意圖](../guide#開始使用)
