--- a/src/FQA/2022-02-17.md
+++ b/src/FQA/2022-02-17.md
@@ -13,6 +13,6 @@ tag:
   
 ### 說明
 
-  此為<Badge type="warning" text="台股收費版" vertical="middle"/>才有的進階功能
+  此為<Badge type="warning">台股訂閱版</Badge>才有的進階功能
 
   參考 [進階功能 > 平倉](../StockProfolioDocs/PayOnly/進階功能.md#平倉)
