--- a/src/FQA/2022-03-15.md
+++ b/src/FQA/2022-03-15.md
@@ -20,6 +20,6 @@ tag:
 
     選擇「股利」買入股數為配股的股數，買入價格不寫
 
-  - <Badge type="warning" text="台股收費版" vertical="middle"/>
+  - <Badge type="warning">台股訂閱版</Badge>
 
     選擇「股票股利」買入股數為配股的股數，買入價格不寫
