--- a/src/FQA/2022-11-07.md
+++ b/src/FQA/2022-11-07.md
@@ -4,7 +4,7 @@ date: 2022-11-07
 category:
  - 台股版
  - 持股
- - 歷史損益
+ - 歷史
 tag:
  - 錯誤
 ---
@@ -30,8 +30,8 @@ tag:
 
     |   版本   | 分頁 | 篩選條件 |
     |:----------:|:--:|:-------:|
-    | <Badge type="warning" text="台股收費版" vertical="middle"/> | 持股 | 持股要是 ==未平倉== |
-    | <Badge type="warning" text="台股收費版" vertical="middle"/> | 歷史損益 | 歷史損益要是 ==已平倉== |
+    | <Badge type="warning">台股訂閱版</Badge> | 持股 | 持股要是 ==未平倉== |
+    | <Badge type="warning">台股訂閱版</Badge> | 歷史損益 | 歷史損益要是 ==已平倉== |
 
   ::: tip 如有不對，直接按儀表板的「更新交易紀錄」按鈕即可
   :::
