--- a/src/FQA/2022-11-10.md
+++ b/src/FQA/2022-11-10.md
@@ -18,7 +18,7 @@ tag:
   目前已知手機 APP 不支援以下項目:
   - 按鈕的執行程序
   - 資料透析表的篩選
-  - <Badge type="warning" text="台股收費版" vertical="middle"/>的時間軸折線圖 (會顯示目前系統不支援這個圖表類型)
+  - <Badge type="warning">台股訂閱版</Badge>的時間軸折線圖 (會顯示目前系統不支援這個圖表類型)
   
   上述項目必須是電腦才能正常使用，其餘一般的使用是可以的
   :::
