--- a/src/FQA/2021-06-02.md
+++ b/src/FQA/2021-06-02.md
@@ -15,7 +15,7 @@ tag:
 ### 紀錄方法
 
   1. 將 A 股剩餘股數全部記錄成賣出，B 股的持股數全部記錄成買進
-  2. 填上相應的轉換股數後。成本仍應維持不變(依照實際軟換情況而定)
+  2. 填上相應的轉換股數後。成本仍應維持不變(依照實際轉換情況而定)
   3. 若實際情況轉換有價差，則將 B 股(自動生成區塊)支出欄位的部分，手動更改成 A 股賣出的收入。 
      > 使 A 賣出 = B 買進 成本相同即可
 
