--- a/src/FQA/2022-12-03.md
+++ b/src/FQA/2022-12-03.md
@@ -9,11 +9,10 @@ tag:
 
 # 可否新增其他功能?
 
-
 ### 說明
 
-  - <Badge type="warning" text="台股收費版" vertical="middle"/> 若有新的想法經考慮後會以不定期的方式新增功能，若有較大的更新會發信通知付費的使用者。在付費使用期間內皆可以進行資料搬移並更新
+  - <Badge type="warning">台股訂閱版</Badge> 若有新的想法經考慮後會以不定期的方式新增功能，若有較大的更新會發信通知付費的使用者。在付費使用期間內皆可以進行資料搬移並更新
 
   - 其餘可依使用者需求客製化
 
-  參考 [版本 > 客製化](../Version/客製化.md)
+  參考 [版本 > 客製化](../guide/version/客製化.md)
