【Hope主題】v22 常見問題，調整完成

--- a/src/FQA/2022-03-15.md
+++ b/src/FQA/2022-03-15.md
@@ -5,7 +5,7 @@ category:
  - 台股版
  - 交易紀錄
 tag:
- - Sheet操作
+ - 記錄方式
  - 股利
 ---
 
@@ -16,10 +16,4 @@ tag:
 
   因為是配股因此沒有成本
 
-  - <Badge text="台股免費版" vertical="middle"/>
-
-    選擇「股利」買入股數為配股的股數，買入價格不寫
-
-  - <Badge type="warning">台股訂閱版</Badge>
-
-    選擇「股票股利」買入股數為配股的股數，買入價格不寫
+  選擇「股票股利」買入股數為配股的股數，買入價格不寫
