--- a/src/FQA/2022-11-03.md
+++ b/src/FQA/2022-11-03.md
@@ -3,6 +3,7 @@ description:
 date: 2022-11-03
 category:
  - 台股版
+ - 儀表板
  - 交易紀錄
  - 持股
  - 歷史
@@ -18,7 +19,7 @@ tag:
 
   - 同樣都是上櫃股票，有些個股可以正常取價，有些個股則不能取價。
   - 上述情況經過幾小時的等待後，問題仍存在
-  - 重新開啟(重新整理)，問題仍存在
+  - 重新開啟(網頁重新整理)，問題仍存在
 
 #### 部分可以代表此功能正常。因此推測部分個股無法取價可能的原因有以下幾個
 
@@ -47,5 +48,5 @@ tag:
   > 但如果曾經買過的股票有上百檔，又在短時間內快速重啟。導致這幾百檔股票在短時間內，全部都要重新查詢好多次，就有可能導致訪問次數達到限制
 
   ::: tip 
-  若經過多日仍是壞掉的狀態，請[聯繫懶魚](../Contact.md#聯繫懶魚)
+  若經過多日仍是壞掉的狀態，請[聯繫懶魚](../LanYu.md#聯繫懶魚)
   :::
