--- a/src/FQA/2022-11-05.md
+++ b/src/FQA/2022-11-05.md
@@ -44,5 +44,5 @@ tag:
   
   因為股票最後終究都會賣掉(時間長短)，因此先預設為已平倉(只要有賣出過一次該檔股票，就不會出現錯誤)，若是不想要這個預設，把平倉那一欄的公式全部刪除即可
   
-  參考 [常見問題Q&A > 錯誤訊息 #DIV/0!](2022-11-06.md)
+  參考 [常見問題 > 錯誤訊息 #DIV/0!](2022-11-06.md)
 
