--- a/src/FQA/2022-11-06.md
+++ b/src/FQA/2022-11-06.md
@@ -3,6 +3,7 @@ description:
 date: 2022-11-06
 category:
  - 台股版
+ - 儀表板
  - 持股
  - 歷史
 tag:
@@ -15,7 +16,7 @@ tag:
 
 ### 說明
 
-  請先看[常見問題Q&A > 持股/歷史損益分頁出現錯誤訊息](2022-11-07.md)，看完後仍有問題再來看這裡
+  請先看[常見問題 > 持股/歷史損益分頁出現錯誤訊息](2022-11-07.md)，看完後仍有問題再來看這裡
   
   絕大多數的問題是在交易紀錄的手動輸入區有錯誤
   
