--- a/src/FQA/2022-11-08.md
+++ b/src/FQA/2022-11-08.md
@@ -11,14 +11,12 @@ tag:
 
 ### 說明
 
-  需要把手動輸入的資料複製到新建立的個人範本中即可
+  把手動輸入的資料複製到新建立的副本中即可
 
   ex.
 
-  台股免費版:「交易紀錄-手動輸入區」「券商與分類」
-
-  台股收費版:「交易紀錄-手動輸入區」「券商與分類」「現金股利(記錄區/存股計畫區)」「觀察」
+  台股訂閱版:「交易紀錄-手動輸入區」「券商與分類」「現金股利(記錄區/存股計畫區)」「觀察」
 
   ::: info 需要注意的點
-  複製貼上時請使用 滑鼠右鍵 > 選擇性貼上 > 僅貼上值 來確保格式不會被破壞
+  複製貼上時請使用「滑鼠右鍵 > 選擇性貼上 > 僅貼上值」來確保格式不會被破壞
   :::
