--- a/src/FQA/2022-11-16.md
+++ b/src/FQA/2022-11-16.md
@@ -10,7 +10,7 @@ tag:
 
 ### 為什麼會有手續費計算上的問題?
 
-  參考 [常見問題Q&A > 1 元的誤差](2022-11-17.md)
+  參考 [常見問題 > 1 元的誤差](2022-11-17.md)
 
 # 如何知道券商手續費的計算進位方式?
 
