--- a/src/FQA/2022-11-17.md
+++ b/src/FQA/2022-11-17.md
@@ -10,6 +10,7 @@ tag:
  - 已實現損益
  - 零股
  - 手續費
+ - 記錄方式
 ---
 
 ### 前言
@@ -18,7 +19,7 @@ tag:
 
 ### 如何知道手續費計算方式是麼進位?
 
-  參考 [常見問題Q&A > 如何知道券商手續費的計算進位方式?](2022-11-16.md)
+  參考 [常見問題 > 如何知道券商手續費的計算進位方式?](2022-11-16.md)
 
 # 1 元的誤差
 
@@ -26,16 +27,22 @@ tag:
   - [進位問題](#進位問題)
   - [零股](#零股)
 
+## 調整方式
+
+  ::: tip 在【交易紀錄】的「W欄-零股差價 1 元」選擇「扣1」
+  :::
+
 ### 進位問題
 
   ::: tip 這是屬於手續費進位問題
   :::
-  在「未實現損益」「已實現損益」
+  在「未實現損益」與「已實現損益」
 
   因為是多筆加總，因此加總後可能會有誤差屬正常現象
 
   ::: info 舉例
-  買進 已經四捨五入 賣出 也四捨五入
+  買進，已經四捨五入
+  賣出，也四捨五入
 
   但實際損益的公式是全部一起算才四捨五入
 
@@ -43,7 +50,7 @@ tag:
 
   賣 1000 股 71.1 元 + 手續費 = `70862` 元
 
-  計算差額 = `2338` 元
+  計算差額 = <Badge type="warning">2338</Badge> 元
 
 ---
 
@@ -53,9 +60,9 @@ tag:
 
   賣出 = `70861.6` 元
 
-  計算差額 = `2337.2` 元 > 四捨五入 `2337` 元
-  
-  `2337` 元與 `2338` 元這裡就會產生 `1`元 的誤差
+  計算差額 = `2337.2` 元 > 四捨五入 <Badge type="danger">2337</Badge> 元
+
+  <Badge type="warning">2338</Badge> 元與 <Badge type="danger">2337</Badge> 元這裡就會產生 `1`元 的誤差
   :::
   
 ### 零股
@@ -70,5 +77,3 @@ tag:
   最後加總
   並在這過程中將會產生的價差 (原理同未實現損益)
   :::
-
-  > 因此當此情況發生時，只能在交易紀錄的部分直接手動更改 支出 or 收入 欄位的數字
