--- a/src/FQA/2022-12-02.md
+++ b/src/FQA/2022-12-02.md
@@ -1,6 +1,6 @@
 ---
 description:
-date: 2022-12-01
+date: 2022-12-02
 category:
  - 台股版
 tag:
@@ -13,4 +13,7 @@ tag:
 
 ### 說明
 
-  簡單說這份範本背後自動做了很多事，都不是原本excel會有的，例如取得上櫃現價(google只提供上市股，所以要去抓外部網站的資料)，還有按鈕會自動更新持股、歷史損益。如果不允許，這些事情全都沒辦法做。當然，如果只是想要樣板，不想要自動化。也可以不用允許，只是每次更新都要自己手動調整一些地方
+  簡單說這份範本背後自動做了很多事，都不是原本 excel 會有的，例如取得上櫃現價( google 只提供上市股，所以要去抓外部網站的資料)，還有按鈕會自動更新儀表板。如果不允許，這些事情全都沒辦法做。
+  
+  ::: danger 如果仍有疑慮的話，請勿使用此範本
+  :::
