--- a/src/FQA/2022-12-03.md
+++ b/src/FQA/2022-12-03.md
@@ -11,8 +11,11 @@ tag:
 
 ### 說明
 
-  - <Badge type="warning">台股訂閱版</Badge> 若有新的想法經考慮後會以不定期的方式新增功能，若有較大的更新會發信通知付費的使用者。在付費使用期間內皆可以進行資料搬移並更新
+  _台股訂閱版_ 若有新的想法經考慮後會以不定期的方式新增功能
+  在訂閱期間內皆可以進行資料搬移並更新
 
-  - 其餘可依使用者需求客製化
+  參考 [常見問題 > 資料轉移(版本更新)](2022-11-08.md)
+
+### 其餘可依使用者需求客製化
 
   參考 [版本 > 客製化](../guide/version/客製化.md)
