--- a/src/FQA/2022-02-17.md
+++ b/src/FQA/2022-02-17.md
@@ -5,7 +5,7 @@ category:
  - 台股版
  - 交易紀錄
 tag:
- - Sheet操作
+ - 記錄方式
 ---
 
 # 平倉規則(已平倉/未平倉)
@@ -13,6 +13,4 @@ tag:
   
 ### 說明
 
-  此為<Badge type="warning">台股訂閱版</Badge>才有的進階功能
-
-  參考 [進階功能 > 平倉](../StockProfolioDocs/PayOnly/進階功能.md#平倉)
+  參考 [指南 > 交易紀錄 > 平倉](../guide/sheets/交易紀錄.md#平倉)
