--- a/src/FQA/2022-11-04.md
+++ b/src/FQA/2022-11-04.md
@@ -8,7 +8,7 @@ tag:
  - 錯誤
 ---
 
-# 股票代號出現#REF
+# 股票代號出現 #REF
 
 ### 解決方式
 
@@ -22,5 +22,5 @@ tag:
   
   若「股票代號-取值」沒有出現錯誤，則是google本身的問題。過段時間應該會自行修復
   
-  若「股票代號-取值」有出現錯誤，請[聯繫懶魚](../Contact.md#聯繫懶魚)
+  若「股票代號-取值」有出現錯誤，請[聯繫懶魚](../LanYu.md#聯繫懶魚)
 
