--- a/src/FQA/2022-11-07.md
+++ b/src/FQA/2022-11-07.md
@@ -3,6 +3,7 @@ description:
 date: 2022-11-07
 category:
  - 台股版
+ - 儀表板
  - 持股
  - 歷史
 tag:
@@ -13,27 +14,16 @@ tag:
 
 ### 說明
 
-  首先請自己檢查篩選條件使否錯誤
+  首先請自己檢查篩選條件是否錯誤
 
-  - 台股免費版
+ `未平倉`代表仍持有該檔股票，相反的`已平倉`則為已出清剛檔股票
 
-    持股數大於 0 代表仍持有這檔股票。相反的持股數 = 0 代表已經全部賣出。所以才會進到歷史損益
+| 分頁 | 篩選條件 |
+|:--:|:-------:|
+| 持股 | 持股要是 ==未平倉== |
+| 歷史損益 | 歷史損益要是 ==已平倉== |
 
-    |   版本   | 分頁 | 篩選條件 |
-    |:----------:|:--:|:-------:|
-    | <Badge text="台股免費版" vertical="middle"/> | 持股 | 持股欄位必須全部都 ==不等於== 0 |
-    | <Badge text="台股免費版" vertical="middle"/> | 歷史損益 | 持股欄位必須全部都 ==等於== 0 |
-
-  - 台股收費版
-
-    `未平倉`代表仍持有該檔股票，相反的`已平倉`則為已出清剛檔股票
-
-    |   版本   | 分頁 | 篩選條件 |
-    |:----------:|:--:|:-------:|
-    | <Badge type="warning">台股訂閱版</Badge> | 持股 | 持股要是 ==未平倉== |
-    | <Badge type="warning">台股訂閱版</Badge> | 歷史損益 | 歷史損益要是 ==已平倉== |
-
-  ::: tip 如有不對，直接按儀表板的「更新交易紀錄」按鈕即可
+  ::: tip 如有不對，直接按儀表板的「更新儀表板」按鈕即可
   :::
   
 ### 若上述都正確
