【Hope主題】v24 新增自動記錄一開始無資料的說明

--- a/src/guide/feature/自動記錄投資變化.md
+++ b/src/guide/feature/自動記錄投資變化.md
@@ -4,6 +4,13 @@ icon: chart-line
 order: 4
 ---
 
+## 一開始沒有資料顯示是正常的
+
+::: info 說明
+自動記錄是隨著時間逐漸紀錄當下的變化，剛開始並沒有紀錄，自然也無法顯示圖表
+幾周後來看就會有了
+:::
+
 #### 試算表將自動將以「週」為單位下數據記錄下來，方便觀察投資走勢的變化
  
 - 投入成本
