--- a/src/guide/sheets/儀表板.md
+++ b/src/guide/sheets/儀表板.md
@@ -63,6 +63,11 @@ order: 1
 | 動態選項 |      1. 可調整顯示的數值 ( 不可重複 ) 共 5 種可選<br>2. 可調整顯示的時間區間       |                         可調整圖表顯示的順序、數量、時間                         |                   可調整圖表顯示的順序、數量、時間                   |
 | 資料來源 |                     [自動記錄](自動記錄.md)                      |                        [持股](持股與歷史.md#持股)                         |                  [歷史](持股與歷史.md#歷史)                   |
 
+#### 自動紀錄區塊
+::: info 一開始沒有資料顯示是正常的
+自動記錄是隨著時間逐漸紀錄當下的變化，剛開始並沒有紀錄，自然也無法顯示圖表
+幾周後來看就會有了
+:::
 
 ### 簡易線圖區塊
 
