【Hope主題】v28 更改 LanYu 的聯繫方式v2

--- a/src/guide/include/付款方式.md
+++ b/src/guide/include/付款方式.md
@@ -37,7 +37,7 @@
 4. 告知購買品項 > 依版本填入備註 - Gmail帳號 ( ==要使用的人的 Gmail 帳號== )
    例 : `kevin@gmail.com` 要購入 _台股訂閱版_ → 則填入「台股訂閱版kevin」
    若備註字數超過限制則填入「台股訂閱版」後將匯款成功的畫面截圖
-   並 emil 至 pickupcamry@gmail.com
+   並 emil 至 94lanyu@gmail.com
    ( <font color="red">mail 中需含轉帳末五碼截圖、Gmail、轉帳日期、購買品項</font> )
 
 ::: details 點選展開 > 轉帳流程示意圖
